// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foundry-agent-troubleshoot - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Troubleshoot and debug agents in Azure AI Foundry. Retrieves container logs for hosted agents, discovers Application Insights connections in the project, and queries telemetry using KQL to diagnose errors, failures, and performance issues.
USE FOR: troubleshoot agent, debug agent, agent logs, agent errors, agent not responding, agent failing, container logs, diagnose agent, agent telemetry, agent traces, agent exceptions.
DO NOT USE FOR: deploying or creating agents (use foundry-agent-deploy), invoking or testing agents (use foundry-agent-run), containerizing projects (use foundry-agent-package), Azure Functions (use azure-functions).
",
  "extractedKeywords": [
    "agent",
    "agents",
    "application",
    "azure",
    "azure-functions",
    "cli",
    "connections",
    "container",
    "containerizing",
    "creating",
    "debug",
    "deploying",
    "diagnose",
    "diagnostic",
    "discovers",
    "errors",
    "exceptions",
    "failing",
    "failures",
    "foundry",
    "foundry-agent-deploy",
    "foundry-agent-package",
    "foundry-agent-run",
    "functions",
    "hosted",
    "insights",
    "invoking",
    "issues",
    "logs",
    "mcp",
    "monitor",
    "observability",
    "performance",
    "project",
    "projects",
    "queries",
    "responding",
    "retrieves",
    "telemetry",
    "testing",
    "traces",
    "troubleshoot",
    "using",
  ],
  "name": "foundry-agent-troubleshoot",
}
`;

exports[`foundry-agent-troubleshoot - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "agent",
  "agents",
  "application",
  "azure",
  "azure-functions",
  "cli",
  "connections",
  "container",
  "containerizing",
  "creating",
  "debug",
  "deploying",
  "diagnose",
  "diagnostic",
  "discovers",
  "errors",
  "exceptions",
  "failing",
  "failures",
  "foundry",
  "foundry-agent-deploy",
  "foundry-agent-package",
  "foundry-agent-run",
  "functions",
  "hosted",
  "insights",
  "invoking",
  "issues",
  "logs",
  "mcp",
  "monitor",
  "observability",
  "performance",
  "project",
  "projects",
  "queries",
  "responding",
  "retrieves",
  "telemetry",
  "testing",
  "traces",
  "troubleshoot",
  "using",
]
`;
